--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap");
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Manrope", sans-serif;
+}
+
+nav {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  color: #8F4FCF;
+  height: 4.5rem;
+  align-items: center;
+  font-size: 2rem;
+}
+nav .logo img {
+  width: 80%;
+  align-self: center;
+  justify-self: center;
+}
+
+section {
+  width: 100vw;
+}
 section.home {
+  height: 80vh;
   background-color: #8F4FCF;
   display: flex;
-  width: 100%;
-  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  color: #FFF;
+}
+section.home h1 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+section.home h2 {
+  font-size: 1.2rem;
+  margin-bottom: 1.2rem;
+}
+section.content h3 {
+  text-align: center;
+  padding: 1rem;
+}
+
+footer {
+  width: 100vw;
+  height: 2rem;
+  display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 48px;
+  background-color: #8F4FCF;
   color: #FFF;
-  font-family: 'Manrope', sans-serif;
 }
+footer a {
+  color: #FFF;
+  text-decoration: none;
+}
+
+/*# sourceMappingURL=main.css.map */
